--- a/actividad3.html
+++ b/actividad3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACTIVIDAD 3</title>
-    <link rel="stylesheet" href="./css/stilo3.css">
+    <link rel="stylesheet" href="stilo3.css">
 </head>
 <body>
     <h1 class="actividad3">ACTIVIDAD 3</h1>
